<resources>
    <string name="app_name">LEAP1: Baseline</string>
    <string name="section_info">  بنیادی معلومات </string>
    <string name="section_A">  گھر کی شناخت </string>
    <string name="yes"> ہاں yes</string>
    <string name="no">no نہیں </string>
    <string name="dkn"> معلوم نہیں </string>
    <string name="other">other دیگر (وضاحت کریں) </string>
    <string name="none"> کچھ نہیں </string>
    <string name="nr"> No Response </string>
    <string name="days"> دن days</string>
    <string name="weeks">Weeks  ہفتے</string>
    <string name="reason"> دن </string>
    <string name="hint_mstudyid">Enter mother study id here!</string>
    <string name="nextSection">NextSection اگلا سیکشن</string>
    <string name="endForm">اختتام EndForm</string>
    <string name="digits">1234567890.,+=-qwertyuiopasdfghjklzxcvbnm ?%#@!&amp;QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="Main"> Should we treat iron deficiency anaemia of pregnancy with Lactoferrin?    کیا حمل کے دوران فولاد کی کمی کو لیکٹوفرین سے علاج کے ذریعے ٹھیک کیا جانا چاہیے؟رینڈ مائزکنڑول ٹرائل</string>
    <string name="fheading">FOLLOW UP</string>
    <string name="fetalheading">FETAL ABNORMALITY FORM</string>
    <string name="identification">IDENTIFICATION</string>
    <string name="mstudyid">Study ID</string>
    <string name="mrno">Mr#</string>
    <string name="randomization">RANDOMIZATION WORKSHEET</string>
    <string name="baseline">BASELINE</string>
    <string name="additionalinfo">ADDITIONAL INFORMATION</string>
    <string name="sf">SF-12v2 HEALTH SURVEY SCORING DEMONSTRATION</string>
    <string name="aq">AQOL-8D Data Collection Copy</string>
    <string name="fuptitle">  LACTOFERRIN EVALUATION IN ANEMIA IN PREGNANCY </string>
    <string name="mddw">MINIMUM DIETARY DIVERSITY FOR WOMEN </string>
    <string name="sectionA">اہلیت کی تفصیلات</string>
    <string name="fheadingsub">کیا حمل کے دوران فولاد کی کمی کو لیکٹوفرین سے علاج کے ذریعے ٹھیک کیا جانا چاہیے؟رینڈ مائزکنڑول ٹرائل</string>
    <string name="siteNumber">Site Number .جگہ کا نمبر</string>
    <string name="studyID">Mother’s Study ID ماں کی اسٹیڈی آئی ڈی</string>
    <string name="b01">Study Identification Number   اسٹیڈی کا شناختی نمبر</string>
    <string name="b02">تاریخ اندراج  Date of Enrolment </string>
    <string name="b03">ہسپتال کی آئی ڈی Hospital ID  </string>
    <string name="b04">   شریک کا نام   Name of participant  </string>
    <string name="b05">  Group گروپ</string>
    <string name="b0501"> Group A   گروپ اے  </string>
    <string name="b0502">Group B گروپ بی </string>
    <string name="b06">Husband’s Name  شوہر کا نام </string>
    <string name="b07">Complete Address   مکمل پتہ  </string>
    <string name="b08">Contact Number رابطہ نمبر</string>
    <string name="b0801">بیوی Wife </string>
    <string name="b0802">شوہر Husband</string>
    <string name="b0803"> PTCL </string>
    <string name="b09"> Education of woman خاتون کی تعلیم </string>
    <string name="education1">No Formal Education </string>
    <string name="education2">Only Quranic education</string>
    <string name="education3">Primary school</string>
    <string name="education4">Secondary school</string>
    <string name="education5">Bachelor degree</string>
    <string name="education6">Masters</string>
    <string name="education7">PhD</string>
    <string name="education8">Technical education</string>
    <string name="b10"> Occupation of Womanخاتون کا پیشہ  </string>
    <string name="b11"> شوہر کی  تعلیم Education of Husband</string>
    <string name="b12">Occupation of Husband شوہر کا پیشہ </string>
    <string name="occupation1"> کاربار Business</string>
    <string name="occupation2">Driver ڈرئیور</string>
    <string name="occupation3">فیکٹری مزدور Factory Worker</string>
    <string name="occupation4">کھیتی باڑی Farming</string>
    <string name="occupation5">General Labor  عام مزدور</string>
    <string name="occupation6">سرکاری ملازم Govt.Service </string>
    <string name="occupation7">Housewifeخاتون خانہ </string>
    <string name="occupation8">Landlord مالک مکان </string>
    <string name="occupation9">نجی ملازم Private Service </string>
    <string name="occupation10">  Road Construction سڑک کی تعمیر</string>
    <string name="occupation11">دکاندار Shop Keeper </string>
    <string name="occupation12">طالب علم Student</string>
    <string name="occupation13">استاد Teacher</string>
    <string name="occupation14">Vendor وینڈر </string>
    <string name="occupation15">Unemployed بے روز گار </string>
    <string name="occupation16">Retiredریٹائرڈ </string>
    <string name="occupation17">professionals پیشہ ور </string>
    <string name="occupation77">Diploma holders ڈگری ہولڈر </string>
    <string name="b13"> گھر میں بولی جانی والی مادری زبان کیاہے What is the language spoken at home</string>
    <string name="b1301">Urdu اردو </string>
    <string name="b1302">Punjabi پنجابی</string>
    <string name="b1303">پشتو Pashto</string>
    <string name="b1304">Sindhi سندھی</string>
    <string name="b14">Any addiction? کوئی نشہ </string>
    <string name="b1401">Betel leaves  پان</string>
    <string name="b1402">Chalia چھالیہ </string>
    <string name="b1403"> گٹکا Gotka</string>
    <string name="b1404">Superi سپاری </string>
    <string name="b1405"> حقہ Huqa</string>
    <string name="b15">شوہر کی اوسط ماہانہ آمدنی  Husband’s Average monthly income in PKR </string>
    <string name="b16">Household Ownership گھریلو ملکیت </string>
    <string name="b1601">Own اپنا</string>
    <string name="b1602">کرائے کا Rented</string>
    <string name="b1603">Living without paying rent بغیر کرائے کے رہائش </string>
    <string name="b17">انٹرونیشن کی تاریخ Date of intervention </string>
    <string name="b18">Mother’s weight ماں کا وزن </string>
    <string name="b1801"> (kg) کلو گرام  </string>
    <string name="b19">Mother’s Height ماں کا قد </string>
    <string name="b1901">cm </string>
    <string name="b20">Estimated delivery date متوقع ترسیل کی تاریخ </string>
    <string name="b21">Blood results IL6 خون کے نتائج </string>
    <string name="b21hb"> Hemoglobin ہیموگلوبن </string>
    <string name="b21sf">Serum Ferritin</string>
    <string name="b21crp">CRP </string>
    <string name="b21rbc">RBC</string>
    <string name="b21tsi">Total Serum Iron </string>
    <string name="b2101">(g/dL)</string>
    <string name="b2102">(ng/mL)</string>
    <string name="b2103">(mg/dL)</string>
    <string name="b2104">(10&#94;12/L)</string>
    <string name="b2105">(µg/dL)</string>
    <string name="b22">Blood pressure  فشار خون  </string>
    <string name="b22unit">mmHg</string>
    <string name="b23">Does mother have pre-existing diabetes? کیا ماں کو پہلے سے ہی زیابیطس ہے </string>
    <string name="b2301"> Type 1 </string>
    <string name="b2302">  Type 2 </string>
    <string name="b24"> Concomitant Medication دیگر ادوایات </string>
    <string name="b2401">Pregnancy supplement حمل ضمیمہ</string>
    <string name="b248801r">If Yes, please specify reason اگر ہاں تو براہ مہربانی وضاحت کریں </string>
    <string name="b25">List Of Pregnancy Supplements (and Iron content)حمل ضمیمہ کی فہرست اور فولاد کے مواد (نیچے صرف کوڈ استعمال کریں </string>
    <string name="b2501">Iberet Folic 500 Gradumet (105mg elemental iron) </string>
    <string name="b2502">Sangobion Capsules  (30mg elemental iron)</string>
    <string name="b2503">Ferosoft (100mg elemental iron) </string>
    <string name="b2504">Fefol Vit (47mg elemental iron) </string>
    <string name="b2505">Ferrous Sulphate  (65mg elemental iron) </string>
    <string name="b2506">Ferosoft Syrup (50mg elemental iron/ 5 ml)</string>
    <string name="b2507">Meiji Mamilac (3.1 mg elemental iron/1 cup) </string>
    <string name="b2508">Enfamama A+ (6mg elemental iron/240 ml) </string>
    <string name="b2509">Sytron Syrup (27.5 mg elemental iron/ 5 ml)</string>
    <string name="b2510">Fefol-Vit (47 mg elemental iron) </string>
    <string name="b2511">Fefol (47 mg elemental iron) </string>
    <string name="b2512">Surbex Z </string>
    <string name="b2513">Surbex T </string>
    <string name="b2514">Optilet M</string>
    <string name="b2515">Vital B </string>
    <string name="b2516">Vital M </string>
    <string name="b2517">Ensure </string>
    <string name="b2518">CaC-1000 Plus </string>
    <string name="b2519">Tab- Ostenate  </string>
    <string name="b2520">Tab- Ostenate D </string>
    <string name="b2588">other </string>
    <string name="b26">Biological Samples حیاتیاتی نمونے</string>
    <string name="b26r">If No, please specify reason اگر نہیں تو براہ مہربانی وضاحت کریں </string>
    <string name="food1">Grains, White Roots and Tubers, and Plantains</string>
    <string name="food2">Pulses (Beans, Peas, and Lentils)</string>
    <string name="food3">Nuts and Seeds</string>
    <string name="food4">Dairy</string>
    <string name="food5">Meat, Poultry, and Fish</string>
    <string name="food6">Eggs </string>
    <string name="food7">Dark Green Leafy Vegetables</string>
    <string name="food8">Other Vitamin A-rich Fruits and Vegetables</string>
    <string name="food9">Other Vegetables</string>
    <string name="food10">Other Fruits</string>
    <string name="nofood">ان میں سے کچھ بھی نہیں کھایا</string>
    <string name="nw501info"> خاتون سے پوچھیں کہ کل صبح جاگنے سے لے کررات کو سونے تک کیا  کچھ کھایا </string>
    <string name="nw501info1"> فوڈ گروپ جاننے کے لیے دئیے گئے کتابچہ کو دیکھیں اور کھائے گئے کھانوں کا اندراج مندرجہ ذیل ٹیبل  میں کری   </string>
    <string name="nw501a">مثلاً جو،جوار،دلیا،چاول ،شلجم ،گندم،شکرقندی،کچے کیلے، بیھ،اروی،آلو  وغیرہ </string>
    <string name="nw501b"> تمام قسم کی لوبیا ،چنا ،مٹر  ،ارد کی دال ،اور تمام دوسری دالیں </string>
    <string name="nw501c">مونگ پھلی،بادام،کاجو،پستہ،اخروٹ،خربوزے کے بیج، تل،سورج مکھی کے بیج  اور کدو کے بیج وغیرہ</string>
    <string name="nw501d"> کم اور مکمل چکنائی والا دودھ،دودھ ،دہی،پنیر،خشک دودھ اور دودھ  کی تمام قسمیں </string>
    <string name="nw501e">گائے ،بھنس ،بکری،بھیڑ،دنبہ،مرغی،بطخ،کبوتر،مرغابی کا گوشت،مچھلی اور دوسرے تمام حلال جانوروں کا گوشت ،پوٹا،کلیجی،اوجھڑی،دل،گردہ،ڈبے میں محفوظ مچھلی،جینھگے،کیٹرا،خشک /برف میں رکھی ہوئی مچھلی</string>
    <string name="nw501f"> مرغی اور بطخ کے انڈے </string>
    <string name="nw501g">گہرے ہرے پتوں والی سبزیاں مثلاً میتھی   ،پالک، کریلا، بھنڈی، کدو ،بروکولی ،ہری مرچ ، سلاد پتہ ، گوبی ساگ ،ہرا کدو وغیرہ</string>
    <string name="nw501h"> وٹامن اے سے بھرپور پھل اور سبزیاں مثلاً خوبانی ،خربوزہ، تربوز، پپیتا،آملوک،گاجر وغیرہ</string>
    <string name="nw501i"> دوسری سبزیاں مثلاًٹماٹر ،مکئی،پھول گوبی ،بند گوبی ،تورئی،سلاد پتے ،پیاز،اجوائن،ہرا مٹر، بیگن، کھیرا وغیرہ  </string>
    <string name="nw501j">سیب،انگور،پپیتا،خوبانی،چکوترا،امرود،ناشپاتی،کیلا،انناس،جامن،لیموں،انار،تربوز،آلوبخارہ ،نارنگی،آم،آڑو وغیرہ </string>
    <string name="eot01">گزشتہ علاج کی تاریخ  </string>
    <string name="eot01a"> (دن/مہینہ /سال)  </string>
    <string name="eot02">کیا علاج مکمل کیا گیا تھا؟  </string>
    <string name="eot02a">ھاں  </string>
    <string name="eot02b">نہیں  </string>
    <string name="eot03">علاج کے اختتام سے قریب ترین کے خون کےنتائج </string>
    <string name="eot03a">ہیموگلوبن</string>
    <string name="eot04">علاج بند کرانے کی وجہ</string>
    <string name="eot0401">اسٹیڈی جاری رکھنے کے لیے ہیموگلوین بہت کم</string>
    <string name="eot0401a">اگر ہاں براہ مہربانی متبادل علاج کی وضاحت فراہم کریں </string>
    <string name="eot0401b">متبادل علاج کی تاریخ </string>
    <string name="eot0402">ناقابل قبول نقصانات ،براہ مہربانی وضاحت کریں </string>
    <string name="eot0403">مصنوعات دستیاب نہیں ہے،براہ مہربانی وضاحت کریں </string>
    <string name="eot0404">مریض کا دستبردار ی کا فیصلہ  </string>
    <string name="eot0404a">انٹرونشن سے  </string>
    <string name="eot0404b">ڈیٹا کو لیکشن سے  </string>
    <string name="eot0405">جنین کی موت(اسقاط حمل /  بچے کا مردہ  پیداہونا) </string>
    <string name="eot0406">دیگر براہ مہربانی وضاحت کریں   </string>
</resources>