<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="edu.aku.hassannaqvi.leap1_baseline.activities.MDDWActivity">

<data>

    <import type="android.view.View" />

    <variable
        name="callback"
        type="edu.aku.hassannaqvi.leap1_baseline.activities.MDDWActivity" />
</data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorMainHeading"
        android:gravity="center"
        android:text="@string/mddw"
        android:textSize="30sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <TextView
        style="@style/helperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorSubHeading"
        android:text="@string/nw501info"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        style="@style/helperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSubHeading"
        android:text="@string/nw501info1"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSubHeading"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/colorPrimaryDark" />
    <TextView
        android:id="@+id/nw501"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fldGrpnw501check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food1"/>

                <CheckBox
                    android:id="@+id/nw501a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/nw501a" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food2"/>


                <CheckBox
                    android:id="@+id/nw501b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/nw501b" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food3"/>


                <CheckBox
                    android:id="@+id/nw501c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"

                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/nw501c" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food4"/>


                <CheckBox
                    android:id="@+id/nw501d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/nw501d" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food5"/>


                <CheckBox
                    android:id="@+id/nw501e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/nw501e" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food6"/>


                <CheckBox
                    android:id="@+id/nw501f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/nw501f" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food7"/>


                <CheckBox
                    android:id="@+id/nw501g"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/nw501g" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food8"/>


                <CheckBox
                    android:id="@+id/nw501h"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/nw501h" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food9"/>

                <CheckBox
                    android:id="@+id/nw501i"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/nw501i" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/food10"/>

                <CheckBox
                    android:id="@+id/nw501j"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/nw501j" />


                <CheckBox
                    android:id="@+id/nw501none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/nofood" />

            </LinearLayout>



            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection"
                    android:textColor="@color/colorTextBtnContinue"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/btnEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/endForm"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="24sp"
                    android:textStyle="bold"/>




            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
</layout>


